# CountryPy

./: CODE_OF_CONDUCT.md  README.md  main.py  pyproject.toml  setup.py
src/countrypy/: __init__.py  cli.py  country_data.py  search.py
tests/: general_tests.py
