[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "countrypy"
version = "1.0.0"
authors = [
    { name="Arjun Sharda", email="sharda.aj17@gmail.com" }
]
description = "A modern python library for country data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ArjunSharda/CountryPy"
"Bug Tracker" = "https://github.com/ArjunSharda/CountryPy/issues"